--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
 .App {
-  text-align: center;
+  width: 100vw;
+  height: 100vh;
+  background-color: #fcfcfc;
+  overflow: hidden;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+button {
+  height: 50px;
+  width: 200px;
+  background-color: rgb(8, 11, 181);
+  border-radius: 10px;
+  font-size: 24px;
   color: white;
+  cursor: pointer;
+  text-decoration: none;
+  outline: none;
+  border: none;
+  transition-duration: 0.4s;
 }
 
-.App-link {
-  color: #61dafb;
+button:hover {
+  background-color: rgb(49, 52, 203);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button:active {
+  transform: translateY(2px);
+}
+
+input {
+  width: 200px;
+  height: 30px;
+  border-radius: 5px;
+  border: none;
+  outline: 2px solid blue;
+}
+
+input:focus {
+  outline: 4px solid rgb(111, 111, 240);
+  border: none;
 }
